<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp"
    android:orientation="vertical"
    android:accessibilityPaneTitle="@string/setting"
    tools:context=".activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btn_get_time"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:padding="12dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_alarm_check"
            android:background="@color/cardview_light_background"/>

        <TextView
            android:id="@+id/show_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_time"
            android:textSize="16sp"
            android:layout_marginLeft="12dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/set_alarm_btn" />
</LinearLayout>
