<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UserinfoFragment">

    <ProgressBar
        android:id="@+id/progressBarUserInfo"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:text="@string/company"
                android:textSize="16dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/id_company"
                android:paddingLeft="30dp"
                android:textSize="16dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:text="@string/location"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_location"
                android:paddingLeft="30dp"
                android:textSize="16dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:text="@string/repository"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_repository"
                android:paddingLeft="30dp"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:text="@string/follow_fragment"
                android:textSize="16dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/id_followers"
                android:paddingLeft="30dp"
                android:textSize="16dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:text="@string/following_fragment"
                android:textSize="16dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/id_following"
                android:paddingLeft="30dp"
                android:textSize="16dp"/>
        </TableRow>

    </TableLayout>

</FrameLayout>